...
                        textAlign: TextAlign.center,
                      ),
                      const SizedBox(height: 4),
                      Text(
                        widget.dateTimestamp == null
                            ? 'Что запомнилось сегодня?'
                            : 'Что запомнилось в этот день?',
                        style: theme.textTheme.bodySmall,
                        textAlign: TextAlign.center,
                      ),
                    ],
                  ),
                ),
...
