...
  final Widget child;

  static const _tabs = [
    (
      icon: Icons.local_florist_outlined,
      activeIcon: Icons.local_florist,
      label: 'Теплица',
      path: '/',
    ),
    (
      icon: Icons.insights_outlined,
      activeIcon: Icons.insights,
      label: 'Статистика',
...
